BSerialPort: Implement WaitForInput() using wait_for_objects.

Fixes #17867.

Change-Id: Ib59781128d5d21317c4042f250333b177a0ed91b
Reviewed-on: https://review.haiku-os.org/c/haiku/+/6432
Reviewed-by: waddlesplash <waddlesplash@gmail.com>